# nap-of-the-rpi

./: README.md  config.example.yaml  main.py  pyproject.toml  setup.sh
core/: __init__.py  config.py  event_bus.py
modules/: __init__.py  laser_controller.py  pir_sensor.py  tts_speaker.py  voice_command.py  weather_service.py
scripts/: install_service.sh  pair_bluetooth.sh
tests/: __init__.py  test_config.py  test_integration.py  test_laser_controller.py  test_pir_sensor.py  test_tts_speaker.py  test_voice_command.py  test_weather_service.py
utils/: __init__.py  bluetooth.py  logger.py
