[project]
name = "nap-of-the-rpi"
version = "0.1.0"
description = "Raspberry Pi 4 device: PIR human detection, laser trigger, and weather TTS reporting with voice commands"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "gpiozero>=2.0",
    "piper-tts>=1.2.0",
    "requests>=2.31.0",
    "vosk>=0.3.45",
    "pyyaml>=6.0",
    "pulsectl>=23.5.0",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "responses>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
